--- a/views/content/healthmanagementdetail.html
+++ b/views/content/healthmanagementdetail.html
@@ -63,13 +63,14 @@
                     </div>
                     <div class="tab-foot">
                       <div class="tab-footinfo">
-                        <p>Choosing the above programs also includes any of the issues you are facing in the "Health Management" Packages as well.</p>
+                        <div class="tick inline-block">
+                          <img src="img/tick.png" alt="" class="img-responsive">
+                        </div>
+                        <p class="inline-block">Choosing the above programs also includes any of the issues you are facing in the "Health Management" Packages as well.</p>
                       </div>
                       <div class="plan">
-                        <div class="text-center">
                         <span class="note"><sup>*</sup>inclusive of all taxes</span>
                         <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
-                        </div>
                       </div>
                     </div>
                   </div>
@@ -104,13 +105,14 @@
                     </div>
                     <div class="tab-foot">
                       <div class="tab-footinfo">
-                        <p>Choosing the above programs also includes any of the issues you are facing in the "Health Management" Packages as well.</p>
+                        <div class="tick inline-block">
+                          <img src="img/tick.png" alt="" class="img-responsive">
+                        </div>
+                        <p class="inline-block">Choosing the above programs also includes any of the issues you are facing in the "Health Management" Packages as well.</p>
                       </div>
                       <div class="plan">
-                        <div class="text-center">
                         <span class="note"><sup>*</sup>inclusive of all taxes</span>
                         <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
-                        </div>
                       </div>
                     </div>
                   </div>
@@ -142,15 +144,16 @@
                         <li>Whatsapp/ message support with your nutritionist</li>
                         <li>Medical guidance, if required</li>
                       </ul>
-                      <div class="tab-foot ">
+                      <div class="tab-foot">
                         <div class="tab-footinfo">
-                          <p>Choosing the above programs also includes any of the issues you are facing in the "Health Management" Packages as well.</p>
+                          <div class="tick inline-block">
+                            <img src="img/tick.png" alt="" class="img-responsive">
+                          </div>
+                          <p class="inline-block">Choosing the above programs also includes any of the issues you are facing in the "Health Management" Packages as well.</p>
                         </div>
                         <div class="plan">
-                          <div class="text-center">
                           <span class="note"><sup>*</sup>inclusive of all taxes</span>
                           <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
-                          </div>
                         </div>
                       </div>
                     </div>
