--- a/views/content/home.html
+++ b/views/content/home.html
@@ -4,7 +4,7 @@
       <div class="slide-holder relate">
         <img ng-src="{{slide.img}}">
         <div class="slider-info get-center text-center">
-          <h2 class="text-uppercase brand-primary text-bold">{{slide.title}}</h2>
+          <h2 class="text-uppercase brand-primary font-semibold">{{slide.title}}</h2>
           <p>{{slide.descp}}</p>
           <button class="text-uppercase btn btn-primary" type="button">Know more</button>
         </div>
@@ -14,7 +14,7 @@
 </div>
 <div class="container">
   <div class="health-design brand-brown-bg relate">
-    <h4 class="text-capitalize inline-block">Health design by suman agarwal</h4>
+    <h4 class="text-capitalize inline-block font-light">Health design by suman agarwal</h4>
     <div class="img-holder get-round">
     </div>
     <div class="pull-right more-abt-suman">
@@ -25,9 +25,9 @@
     <div class="row">
       <div class="col-md-4">
         <div class="health-info">
-          <h3 class="brand-primary title text-uppercase text-bold">Health <span class="block">Packages</span></h3>
+          <h3 class="brand-primary title text-uppercase text-bold font-gotham">Health <span class="block">Packages</span></h3>
           <p class="text-justify health-descp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
-          <button class="btn btn-primary text-uppercase" type="button">know more</button>
+          <button class="btn btn-primary text-uppercase font-gotham letter-space" type="button">know more</button>
           <div class="health-imgholder">
             <img src="img/health-package.png" alt="" class="img-responsive">
           </div>
@@ -35,9 +35,9 @@
       </div>
       <div class="col-md-4">
         <div class="health-info">
-          <h3 class="brand-yellow title text-uppercase  text-bold">Health <span class="block">Products</span></h3>
+          <h3 class="brand-yellow title text-uppercase text-bold font-gotham">Health <span class="block">Products</span></h3>
           <p class="text-justify health-descp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
-          <button class="btn btn-yellow text-uppercase" type="button">know more</button>
+          <button class="btn btn-yellow text-uppercase font-gotham letter-space" type="button">know more</button>
           <div class="health-imgholder">
             <img src="img/health-products.png" alt="" class="img-responsive">
           </div>
@@ -45,9 +45,9 @@
       </div>
       <div class="col-md-4">
         <div class="health-info">
-          <h3 class="brand-blue title text-uppercase  text-bold">cool <span class="block">sculpting</span></h3>
+          <h3 class="brand-blue title text-uppercase text-bold font-gotham">cool <span class="block">sculpting</span></h3>
           <p class="text-justify health-descp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
-          <button class="btn btn-blue text-uppercase" type="button">know more</button>
+          <button class="btn btn-blue text-uppercase font-gotham letter-space" type="button">know more</button>
           <div class="health-imgholder">
             <img src="img/cool-sculpting.png" alt="" class="img-responsive">
           </div>
@@ -64,7 +64,7 @@
           <div class="col-md-4">
             <div class="info text-center">
               <div class=" inline-block v-top">
-                <h5 class="text-uppercase text-bold brand-brown-dark health-title">Total number of
+                <h5 class="text-uppercase text-bold brand-brown-dark font-semibold health-title">Total number of
                   <span class="block">Clients</span>
                 </h5>
                 <h3 class="health-count text-left white text-bold">10348</h3>
@@ -77,7 +77,7 @@
           <div class="col-md-4">
             <div class="info  text-center people-weight-count">
               <div class="inline-block v-top">
-                <h5 class="text-uppercase text-bold brand-brown-dark health-title">Total
+                <h5 class="text-uppercase text-bold brand-brown-dark font-semibold health-title">Total
                   <span class="block count">Weight Loss</span>
                 </h5>
                 <h3 class="health-count text-left white text-bold">7500
@@ -92,7 +92,7 @@
           <div class="col-md-4">
             <div class="info  text-center no-border">
               <div class="inline-block v-top">
-                <h5 class="text-uppercase text-bold  brand-brown-dark health-title">Presence in
+                <h5 class="text-uppercase text-bold  brand-brown-dark font-semibold health-title">Presence in
                   <span class="block">Countries</span>
                 </h5>
                 <h3 class="health-count text-left white text-bold">38</h3>
@@ -120,7 +120,7 @@
             </div>
             <div class="col-md-6">
               <div class="view-detail relate">
-                <h4 class="text-left brand-brown-dark name">{{slide.name}}</h4>
+                <h4 class="text-left brand-brown-dark name font-semibold">{{slide.name}}</h4>
                 <span class="text-left block brand-primary letter-space">{{slide.location}}</span>
                 <div class="descp brand-primary">
                   <p class="text-justify">{{slide.descp}}</p>
@@ -152,7 +152,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="diet-info">
-              <h4 class="text-center text-bold letter-space">RECIPES</h4>
+              <h4 class="text-center text-bold letter-space font-semibold">RECIPES</h4>
               <div class="diet-holder m-center">
                 <img src="img/recipes.png" alt="" class="img-responsive m-center">
               </div>
@@ -164,7 +164,7 @@
           </div>
           <div class="col-md-6">
             <div class="diet-info">
-              <h4 class="text-center text-bold letter-space">CALORIE METER</h4>
+              <h4 class="text-center text-bold letter-space font-semibold">CALORIE METER</h4>
               <div class="diet-holder m-center">
                 <img src="img/calorie.png" alt="" class="img-responsive m-center">
               </div>
@@ -185,7 +185,7 @@
       <div class="col-md-6">
         <div class="blog-main brand-graylight-bg">
           <div class="heading">
-            <h4 class="text-bold">BLOG</h4>
+            <h4 class="text-bold font-semibold">BLOG</h4>
           </div>
           <div class="blog-info">
             <div class="row">
@@ -196,7 +196,7 @@
               </div>
               <div class="col-md-8">
                 <div class="blog-imginfo">
-                  <p class="letter-space">Anti Ageing Tips</p>
+                  <p class="letter-space font-semibold">Anti Ageing Tips</p>
                 </div>
               </div>
             </div>
@@ -210,7 +210,7 @@
               </div>
               <div class="col-md-8">
                 <div class="blog-imginfo">
-                  <p class="letter-space">Calcium For All Ages And Genders</p>
+                  <p class="letter-space font-semibold">Calcium For All Ages And Genders</p>
                 </div>
               </div>
             </div>
@@ -224,7 +224,7 @@
               </div>
               <div class="col-md-8">
                 <div class="blog-imginfo last-blog-info">
-                  <p class="letter-space">Calories In Cocktails</p>
+                  <p class="letter-space font-semibold">Calories In Cocktails</p>
                 </div>
               </div>
             </div>
@@ -237,7 +237,7 @@
       <div class="col-md-6">
         <div class="askqts blog-main brand-graylight-bg">
           <div class="heading">
-            <h4>ASK
+            <h4 class="font-semibold">ASK
               <span class="text-light">SUMAN</span>
             </h4>
           </div>
@@ -282,8 +282,8 @@
       <div class="row">
         <div class="col-md-6">
           <div class="about-info">
-            <h3 class="text-uppercase brand-brown-dark2">About us</h3>
-            <h5 class="text-bold">Only the fit know how fabulous it feels.</h5>
+            <h3 class="text-uppercase brand-brown-dark2 font-semibold">About us</h3>
+            <h5 class="font-semibold">Only the fit know how fabulous it feels.</h5>
             <p class="text-justify">At Selfcare a team of experts create designer diets to balance out a body-system that rights itself to suit your needs—be it weight loss, the need to circumvent aging, evade arthritis, diabetes or hypertension. Under the expert and experienced guidance of nutritionist Suman Agarwal , a qualified clinical nutritionist as well as a fitness...</p>
             <div class="more">
               <a href="#/aboutus" class="text-uppercase btn btn-primary">know more</a>
