--- a/views/footermenu.html
+++ b/views/footermenu.html
@@ -2,12 +2,12 @@
   <div class="row-flex">
     <div class="col-flex">
       <div class="health-back package relate">
-        <button class="get-center text-uppercase foot-btn" type="button">health packages</button>
+        <button class="get-center text-uppercase foot-btn font-gotham" type="button">health packages</button>
       </div>
     </div>
     <div class="col-flex">
       <div class="health-back shop relate">
-        <button class="get-center text-uppercase foot-btn" type="button">health shop</button>
+        <button class="get-center text-uppercase foot-btn font-gotham" type="button">health shop</button>
       </div>
     </div>
   </div>
