--- a/views/footer.html
+++ b/views/footer.html
@@ -1,4 +1,4 @@
-<footer class="brand-primary-bg">
+<footer class="brand-primary-bg font-semibold">
     <div class="container">
         <div class="row">
             <div class="col-md-2">
@@ -18,7 +18,7 @@
             </div>
             <div class="col-md-3">
                 <div class="menu2">
-                    <h5 class="text-uppercase brand-primary-lighter">Health Packages</h5>
+                    <h5 class="text-uppercase brand-primary-lighter letter-space">Health Packages</h5>
                     <div class="submenu text-uppercase">
                         <ul>
                             <li><a href="" title="Weight Loss">Weight Loss</a></li>
@@ -27,7 +27,7 @@
                     </div>
                 </div>
                 <div class="menu2 foot-about">
-                    <h5 class="text-uppercase brand-primary-lighter">About</h5>
+                    <h5 class="text-uppercase brand-primary-lighter letter-space">About</h5>
                     <div class="submenu text-uppercase">
                         <ul>
                             <li><a href="" title="About Selfcare">About Selfcare</a></li>
@@ -62,7 +62,7 @@
             </div>
             <div class="col-md-4">
                 <div class="">
-                    <div class="note brand-primary-lighter">
+                    <div class="note brand-primary-lighter letter-space">
                         <p>Receive monthly tips on the healthiest foods and excercizes, along with the latest plans and offers.</p>
                     </div>
                     <div class="mail">
@@ -82,9 +82,9 @@
                             <li><a href="" traget="_blank" class="brand-primary-lighter"><i class="fa fa-pinterest-p"></i></a></li>
                         </ul>
                     </div>
-                    <div class="copyright brand-brown-dark">
+                    <div class="copyright brand-brown-dark letter-space">
                        <p>Copyright &copy; Selfcare Support Pvt. Ltd.</p>
-                       <p>All Rights Reserved | Privacy Policy | T&amp;C</p> 
+                       <p>All Rights Reserved | Privacy Policy | T&amp;C</p>
                     </div>
                 </div>
             </div>
