--- a/views/content/healthpackages.html
+++ b/views/content/healthpackages.html
@@ -1,7 +1,7 @@
 <section>
   <div class="selfcare-image">
     <img src="img/apple.jpg" alt="">
-    <h2 class="text-uppercase get-center white">Health Packages</h2>
+    <h2 class="text-uppercase get-center white font-semibold">Health Packages</h2>
   </div>
 
   <div class="what-health-goal">
