--- a/views/content/team.html
+++ b/views/content/team.html
@@ -1,7 +1,7 @@
 <section>
   <div class="selfcare-image text-center">
     <img src="img/apple.jpg" alt="">
-    <h2 class="text-uppercase get-center white">The Selfcare Team</h2>
+    <h2 class="text-uppercase get-center white font-semibold">The Selfcare Team</h2>
   </div>
 
   <div class="container">
