--- a/views/content/weightmanagement.html
+++ b/views/content/weightmanagement.html
@@ -2,7 +2,7 @@
   <div class="banner selfcare-image">
     <img src="img/apple.jpg" alt="">
     <div class="get-center">
-      <h2 class="text-uppercase letter-space white">Weight loss</h2>
+      <h2 class="text-uppercase letter-space white font-semibold">Weight loss</h2>
     </div>
   </div>
   <div class="container">
