--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -35,9 +35,8 @@
 .contact-tel {
   border-left: 1px solid $brand-primary;
   border-right: 1px solid $brand-primary;
-  @include margin(0 0 0 -40px);
+  @include margin(2px 0 0 -40px);
   @include padding(12px 18px);
-  font-weight: bold;
   font-size: 13px;
   letter-spacing: 1px;
 }
@@ -46,20 +45,14 @@
   @include margin(0 0 0 -10px);
   @include padding(10px 0);
   font-size: 16px;
-  font-weight: bold;
 }
 
 // About
 .selfcare-image {
   @include square(100%);
   position: relative;
-  img {
-    @include size(100%, 80%);
-  }
-  h2 {
-    font-size: 50px;
-    font-weight: bold;
-  }
+  img { @include size(100%, 80%); }
+  h2 { font-size: 50px; }
 }
 .about-desc {
   h3 { font-size: 28px; }
