--- a/views/content/cart.html
+++ b/views/content/cart.html
@@ -2,7 +2,7 @@
   <div class="banner selfcare-image">
     <img src="img/apple.jpg" alt="">
     <div class="get-center">
-      <h2 class="text-uppercase letter-space white">my cart</h2>
+      <h2 class="text-uppercase letter-space white font-semibold">my cart</h2>
     </div>
   </div>
 
