--- a/views/content/contactus.html
+++ b/views/content/contactus.html
@@ -1,7 +1,7 @@
 <section>
   <div class="selfcare-image">
     <img src="img/apple.jpg" alt="">
-    <h2 class="text-uppercase get-center white">Contact Us</h2>
+    <h2 class="text-uppercase get-center white font-semibold">Contact Us</h2>
   </div>
 
   <div class="contact-location">
