--- a/views/content/imageconsulting.html
+++ b/views/content/imageconsulting.html
@@ -1,7 +1,7 @@
 <section>
   <div class="selfcare-image">
     <img src="img/apple.jpg" alt="">
-    <h2 class="text-uppercase get-center white">Image Consulting</h2>
+    <h2 class="text-uppercase get-center white font-semibold">Image Consulting</h2>
   </div>
 
   <div class="container">
