--- a/views/content/meet.html
+++ b/views/content/meet.html
@@ -2,7 +2,7 @@
   <div class="banner selfcare-image">
     <img src="img/apple.jpg" alt="">
     <div class="get-center">
-      <h2 class="text-uppercase letter-space white">health management</h2>
+      <h2 class="text-uppercase letter-space white font-semibold">health management</h2>
     </div>
   </div>
 </div>
