--- a/views/content/news.html
+++ b/views/content/news.html
@@ -1,7 +1,7 @@
 <section>
   <div class="selfcare-image">
-    <img src="" alt="">
-    <h2 class="text-uppercase">News</h2>
+    <img src="img/apple.jpg" alt="">
+    <h2 class="text-uppercase get-center white font-semibold">News</h2>
   </div>
 
   <div class="news">
