--- a/views/content/successstories.html
+++ b/views/content/successstories.html
@@ -1,7 +1,7 @@
 <section>
   <div class="selfcare-image">
     <img src="img/apple.jpg" alt="">
-    <h2 class="text-uppercase get-center white">Success Stories</h2>
+    <h2 class="text-uppercase get-center white font-semibold">Success Stories</h2>
   </div>
 
   <div class="brand-primary-bg people-info">
