--- a/views/header.html
+++ b/views/header.html
@@ -44,12 +44,12 @@
               </div>
               <div class="col-md-3">
                 <div class="contact-tel">
-                  <a class="brand-primary" href="tel:+912261312222">+91 22 6131 2222</a>
+                  <a class="brand-primary font-semibold" href="tel:+912261312222">+91 22 6131 2222</a>
                 </div>
               </div>
               <div class="col-md-2">
                 <div class="signin">
-                  <a class="brand-primary text-uppercase" href="#" ng-click="">Sign In</a>
+                  <a class="brand-primary text-uppercase font-semibold" href="#" ng-click="">Sign In</a>
                 </div>
               </div>
             </div>
