--- a/views/content/healthpackages.html
+++ b/views/content/healthpackages.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="what-health-goal">
-    <h2 class="text-uppercase text-center">Whats your health goal?</h2>
+    <h2 class="text-uppercase text-center brand-brown-dark font-semibold">Whats your health goal?</h2>
 
     <div class="health-goals brand-brown-bg">
       <div class="container">
@@ -14,8 +14,8 @@
           <div class="col-md-6">
             <div class="weight-goal text-center brand-primary brand-brown-light-bg">
               <img src="img/packages/1.png" alt="">
-              <h3 class="text-uppercase">Weight Loss</h3>
-              <p class="text-uppercase">(Includes health management)</p>
+              <h3 class="text-uppercase font-semibold">Weight Loss</h3>
+              <p class="text-uppercase font-semibold">(Includes health management)</p>
               <a href="" class="btn btn-primary text-uppercase btn-packages">Know More</a>
             </div>
           </div>
@@ -23,8 +23,8 @@
           <div class="col-md-6">
             <div class="health-manage-goal text-center brand-primary brand-brown-light-bg">
               <img src="img/packages/2.png" alt="">
-              <h3 class="text-uppercase">Health Management</h3>
-              <p class="text-uppercase">&nbsp;</p>
+              <h3 class="text-uppercase font-semibold">Health Management</h3>
+              <p class="text-uppercase font-semibold">&nbsp;</p>
               <a href="" class="btn btn-primary text-uppercase btn-packages">Know More</a>
             </div>
           </div>
