--- a/views/content/imageconsulting.html
+++ b/views/content/imageconsulting.html
@@ -21,7 +21,7 @@
 
           <div class="col-md-6">
             <div class="single-consult">
-              <div class="consult-image">
+              <div class="consult-image v-top">
                 <img src="img/consulting/analysis.png" alt="" class="img-responsive">
               </div>
               <div class="consult-title">
@@ -33,7 +33,7 @@
 
           <div class="col-md-6">
             <div class="single-consult">
-              <div class="consult-image">
+              <div class="consult-image v-top">
                 <img src="img/consulting/wardrobe.png" alt="" class="img-responsive">
               </div>
               <div class="consult-title">
@@ -47,7 +47,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="single-consult">
-              <div class="consult-image">
+              <div class="consult-image v-top">
                 <img src="img/consulting/grooming.png" alt="" class="img-responsive">
               </div>
               <div class="consult-title">
@@ -59,7 +59,7 @@
 
           <div class="col-md-6">
             <div class="single-consult">
-              <div class="consult-image">
+              <div class="consult-image v-top">
                 <img src="img/consulting/shopping.png" alt="" class="img-responsive">
               </div>
               <div class="consult-title">
@@ -73,7 +73,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="single-consult">
-              <div class="consult-image">
+              <div class="consult-image v-top">
                 <img src="img/consulting/make-up.png" alt="" class="img-responsive">
               </div>
               <div class="consult-title">
@@ -99,7 +99,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="single-consult">
-              <div class="consult-image">
+              <div class="consult-image v-top">
                 <img src="img/consulting/hair.png" alt="" class="img-responsive">
               </div>
               <div class="consult-title">
@@ -111,7 +111,7 @@
 
           <div class="col-md-6">
             <div class="single-consult">
-              <div class="consult-image">
+              <div class="consult-image v-top">
                 <img src="img/consulting/accessories.png" alt="" class="img-responsive">
               </div>
               <div class="consult-title">
@@ -126,7 +126,7 @@
     </div>
   </div>
 
-  <div class="we-enroll">
+  <div class="we-enroll font-gotham">
     <div class="container">
       <h2 class="text-uppercase text-center">How do we enroll:</h2>
 
@@ -154,7 +154,7 @@
                         </div>
                       </div>
                       <div class="col-md-6">
-                        <p class="text-uppercase services"><span>Pick any 2</span> of the above services</p>
+                        <p class="text-uppercase services"><span class="block">Pick any 2</span> of the above services</p>
                       </div>
                     </div>
                   </div>
@@ -185,7 +185,7 @@
                         </div>
                       </div>
                       <div class="col-md-6">
-                        <p class="text-uppercase services"><span>Pick any 8</span> of the above services</p>
+                        <p class="text-uppercase services"><span class="block">Pick any 8</span> of the above services</p>
                       </div>
                     </div>
                   </div>
@@ -221,7 +221,7 @@
                         </div>
                       </div>
                       <div class="col-md-6">
-                        <p class="text-uppercase services"><span>Pick any 4</span> of the above services</p>
+                        <p class="text-uppercase services"><span class="block">Pick any 4</span> of the above services</p>
                       </div>
                     </div>
                   </div>
@@ -252,7 +252,7 @@
                         </div>
                       </div>
                       <div class="col-md-6">
-                        <p class="text-uppercase services">Make your plan with tina</p>
+                        <p class="text-uppercase services"><span class="block">Make your</span> plan with tina</p>
                       </div>
                     </div>
                   </div>
