--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -229,11 +229,10 @@
         font-size: 28px;
         font-weight: bold;
       }
-      .twelve { @include padding(0 15px); }
     }
     .session-charges {
       @include margin(0 0 0 -22px);
-      @include padding(23px 0 15px);
+      @include padding(23px 0 8px);
       border-radius: 10px;
       .inner-session {
         border-right: 3px solid white;
@@ -253,7 +252,12 @@
       }
     }
   }
-  .session-two { @include margin(100px 0 0 0); }
+  .session-two {
+    @include margin(100px 0 0 0);
+    .last {
+      .session-charges { @include padding(23px 0 15px); }
+    }
+  }
 }
 
 // Team
