--- a/views/content/imageconsulting.html
+++ b/views/content/imageconsulting.html
@@ -232,12 +232,12 @@
           </div>
 
           <div class="col-md-6">
-            <div class="single-session">
+            <div class="single-session last">
               <div class="row">
 
                 <div class="col-md-4">
                   <div class="session-number brand-primary-bg text-center">
-                    <span class="twelve">12</span>
+                    <span>12</span>
                     <h4 class="text-uppercase white">Sessions</h4>
                   </div>
                 </div>
