--- a/views/content/meet.html
+++ b/views/content/meet.html
@@ -2,7 +2,7 @@
   <div class="banner selfcare-image">
     <img src="img/apple.jpg" alt="">
     <div class="get-center">
-      <h2 class="text-uppercase letter-space white font-semibold">health management</h2>
+      <h2 class="text-uppercase letter-space white font-semibold">meet suman agarwal</h2>
     </div>
   </div>
 </div>
@@ -21,25 +21,25 @@
 <div class="container">
     <div class="about-suman">
         <div class="heading text-center">
-            <h4 class="brand-yellow">WON BEST NUTRITIONIST AWARD AT THE VOGUE BEAUTY AWARDS</h4>
+            <h4 class="brand-yellow font-semibold">WON BEST NUTRITIONIST AWARD AT THE VOGUE BEAUTY AWARDS</h4>
         </div>
         <div class="row">
             <div class="col-md-6">
                 <div class="achieve suman-info">
-                    <h4 class="brand-primary title">ACADEMIC ACHIEVEMENT</h4>
+                    <h4 class="brand-primary title font-semibold">ACADEMIC ACHIEVEMENT</h4>
                     <p class="text-justify descp">The difference in Suman's style of work not only comes from her background as a certified nutritionist (Certificate Course in Food and Nutrition, Oxford University, U.K (Aff)), and a qualified fitness trainer from the National Institute of Aerobics (Certificate Course in Fitness from NIA), but also from the intense research she has done in the field of diet and medicine and her inherent interest in each person she encounters. Her Bachelor’s Degree in Science from Kolkata University helps her view food as a scientific art.</p>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="exper suman-info">
-                    <h4 class="brand-blue title">EXPERIENCE</h4>
+                    <h4 class="brand-blue title font-semibold">EXPERIENCE</h4>
                     <p class="text-justify descp">Within a short span of 12 years, Suman has positively influenced the health of thousands of people from different walks of life—including the country’s most powerful industrialists and Bollywood personalities. She had to do it just once, because it was forever. People who've consulted with Selfcare and Suman swear by her. Here are what a few clients say.</p>
                 </div>
             </div>
         </div>
         <div class="pro-info suman-info">
            <div class="text-center">
-                 <h4 class="brand-yellow title">PROFESSIONAl ACHIEVEMENT</h4>
+                 <h4 class="brand-yellow title font-semibold">PROFESSIONAl ACHIEVEMENT</h4>
             </div>
             <p class="text-justify descp">If Suman Agarwal is being celebrated as the new age guru of fitness and health, it is only because when she sets a diet programme, she is actually fine tuning a health plan that you can live by forever. The renowned nutritionist and fitness consultant, who founded the exceptionally successful 'SELFCARE – THE NATURAL WAY' in 2001, has earned many accolades. She authored the much-appreciated book, The Don't Diet Diet Cook Book in 2009 followed by Unjunked in 2013. She has contributed regularly to well-known, all-India publications like DNA, Femina, Beauty &amp; Salon, and many more and has been featured in Vogue India magazine, Chitralekha, Bombay Times, Asian Age, Mid-day and, Hindustan Times newspapers, amongs others. Being regularly quoted by well-read publications like Mint, Hindustan Times and Reader's Digest as well as being interviewed and featured on Star News Channel and CNBC TV 18 as one of India's leading health and nutrition expert to provide expert comments on well being and fitness . Suman is often invited to give talks and hold presentations at prestigious institutes and corporate conglomerates across the country. She has enthralled audiences at Rotary Club Bombay, Rotary Club Worli, Rotary Club Bay View, Rotary Club Pune, Rotary Club Kolkata, Bengal Rowing Club, Hindustan Club, Cosmopolitan Club, Jyotir Mayei Club and Shrimad Rajchandra Ashram and ladies’ clubs such as Ruchika, Sahastrika, Archana, Wake Club, Jain Mahila Samita, and Puncham Club. She has also conducted workshops for corporates like BPCL, HSBC Bank, Welspun, Shroff Eye Clinic, among others. Suman has conducted nutrition awareness programmes for schools including Walshingham School and Birla School.</p>
         </div>
