--- a/views/content/faq.html
+++ b/views/content/faq.html
@@ -6,10 +6,10 @@
     </div>
   </div>
   <div class="container">
-    <div class="faq-accordion">
+    <div class="faq-accordion font-gotham">
       <accordion close-others="oneAtATime" is-open="status.open">
         <accordion-group is-open="status.isFirstOpen" is-disabled= "status.isFirstDisabled">
-          <accordion-heading >
+          <accordion-heading>
             How does the online program work? <i class="pull-right fa" ng-class="{'fa-minus': status.isFirstOpen, 'fa-plus': !status.isFirstOpen}"></i>
           </accordion-heading>
           <div class="faq-descp">
