--- a/views/content/healthmanagementdetail.html
+++ b/views/content/healthmanagementdetail.html
@@ -8,7 +8,7 @@
   <div class="container">
     <div class="get-up brand-brown-bg relate">
       <h3 class="text-center text-bold brand-brown-dark health-heading">LACTATION WITH WEIGHT LOSS</h3>
-      <p class="white">
+      <p class="white health-descp">
         This is a happy but a hectic and phase in woman’s life. She is juggling between taking care of her young one and herself. We offer personalized diet chart for lactation that takes care of your nutritional requirements during this phase and also help you
         shed those extra kilos in the right way.
       </p>
@@ -42,7 +42,7 @@
                   </tab-heading>
                   <div class="chart-info">
                     <div class="tab-head">
-                      <p class="brand-brown-dark">Learn the essentials of a healthy way of life and find out what works the best for you. Shed that extra five kilos by opting for our basic Gold Plan where the first consultation is with Suman and follow ups will be conducted by expert
+                      <p class="brand-brown-dark text-justify">Learn the essentials of a healthy way of life and find out what works the best for you. Shed that extra five kilos by opting for our basic Gold Plan where the first consultation is with Suman and follow ups will be conducted by expert
                         nutritionists, who are supervised by Suman. Spread over approximately two months (eight weeks) this is a designer diet programme tailor-made for you.</p>
                     </div>
                     <div class="tab-body">
@@ -84,7 +84,7 @@
                   </tab-heading>
                   <div class="chart-info">
                     <div class="tab-head">
-                      <p class="brand-brown-dark">Learn the essentials of a healthy way of life and find out what works the best for you. Shed that extra five kilos by opting for our basic Gold Plan where the first consultation is with Suman and follow ups will be conducted by expert
+                      <p class="brand-brown-dark text-justify">Learn the essentials of a healthy way of life and find out what works the best for you. Shed that extra five kilos by opting for our basic Gold Plan where the first consultation is with Suman and follow ups will be conducted by expert
                         nutritionists, who are supervised by Suman. Spread over approximately two months (eight weeks) this is a designer diet programme tailor-made for you.</p>
                     </div>
                     <div class="tab-body">
@@ -126,7 +126,7 @@
                   </tab-heading>
                   <div class="chart-info">
                     <div class="tab-head">
-                      <p class="brand-brown-dark">Learn the essentials of a healthy way of life and find out what works the best for you. Shed that extra five kilos by opting for our basic Gold Plan where the first consultation is with Suman and follow ups will be conducted by expert
+                      <p class="brand-brown-dark text-justify">Learn the essentials of a healthy way of life and find out what works the best for you. Shed that extra five kilos by opting for our basic Gold Plan where the first consultation is with Suman and follow ups will be conducted by expert
                         nutritionists, who are supervised by Suman. Spread over approximately two months (eight weeks) this is a designer diet programme tailor-made for you.</p>
                     </div>
                     <div class="tab-body">
@@ -287,6 +287,7 @@
                   <tab-heading class="duration">
                     <div class="chart-head ">
                       <p class="white text-uppercase">diamond</p>
+                      <p class="price">Rs 99900 <sup>*</sup></p>
                   </tab-heading>
                 </tab>
               </tabset>
