--- a/sass/main.scss
+++ b/sass/main.scss
@@ -141,6 +141,7 @@ $instagram: #396d9a !default;
 .brand-graylight-bg {
   background-color: $brand-graylight;
 }
+
 // fonts
 .font-primary {
   font-family: $font-family-sans-serif;
@@ -163,6 +164,7 @@ $instagram: #396d9a !default;
 .font-gotham {
   font-family: $font-gotham;
 }
+
 //button
 .btn-yellow {
   @include button-variant(white, $brand-yellow, $brand-yellow);
@@ -253,6 +255,7 @@ textarea {
 .v-top {
   vertical-align: top;
 }
+
 // Class
 .relate {
   position: relative;
@@ -318,6 +321,9 @@ button {
 }
 .letter-space {
   letter-spacing: 2px;
+}
+.no-radius {
+  border-radius: 0;
 }
 /* Start writing sass here */
 ///////////////
@@ -627,20 +633,14 @@ button {
     }
   }
 }
+
 ///end home///
 /////////////////////
 ////Health-Management
 ////////////////////
-.health-descp {
-  font-size: 16px;
-}
-.healthchart-list {
-  margin: 60px 0;
-}
-.align {
-  position: relative;
-  top: -12px;
-}
+.health-descp {  font-size: 16px; }
+.healthchart-list { margin: 60px 0; }
+.align { @include margin(-12px 0 0); }
 .tick {
   @include square(34px);
   margin: 0 10px 0 0;
@@ -657,17 +657,13 @@ button {
         max-height: 100%;
       }
     }
-    figcaption {
-      margin: 10px 0;
-    }
+    figcaption { margin: 10px 0; }
   }
 }
-.health-heading {
-  margin: 0 0 25px;
-}
+.health-heading { margin: 0 0 25px; }
 .consult-chart {
-  width: 100px;
-  height: 69px;
+  width: 110px;
+  height: 67px;
   border-radius: 6px;
   background-color: $brand-primary;
   font-size: 16px;
@@ -692,7 +688,7 @@ button {
   }
 }
 .tab-chart {
-  width: 85%;
+  width: 84%;
   border: 2px solid $brand-brown;
   border-radius: 6px;
   display: inline-block;
@@ -711,8 +707,12 @@ button {
       }
     }
   }
-  .chart-info {
-    padding: 30px;
+  .chart-info { padding: 30px;  }
+  .nav-tabs li:last-child a {
+    &:before {
+      content: "";
+      display: none;
+    }
   }
   .nav-tabs li:first-child a {
     background-color: #fff;
@@ -740,21 +740,13 @@ button {
       content: "";
       display: none;
     }
+    &:before {
+      content: '';
+      display: none;
+    }
   }
   .nav-tabs li.active:first-child a {
     background-color: #fff;
-    .chart-head {
-      p {
-        color: $brand-primary;
-      }
-      .price {
-        color: $brand-brown-dark;
-      }
-    }
-    &:after {
-      content: "";
-      display: none;
-    }
   }
   .nav-tabs {
     background-color: $brand-brown;
@@ -786,6 +778,16 @@ button {
               }
             }
           }
+        }
+        &:before {
+          content: "";
+          height: 45px;
+          width: 2px;
+          position: absolute;
+          right: -4px;
+          top: 50%;
+          @include transform(translateY(-50%));
+          background: #fff;
         }
       }
     }
@@ -835,7 +837,7 @@ button {
   margin: 20px 0 0;
   .tab-footinfo {
     display: inline-block;
-    width: 70%;
+    width: 68%;
     p {
       width: 320px;
     }
@@ -850,6 +852,7 @@ button {
     }
   }
 }
+
 //end Health-management////
 /////meet////
 .suman-video {
@@ -884,6 +887,7 @@ button {
 .pro-info {
   margin-bottom: 60px;
 }
+
 ////end meet///
 //////faq/////
 .faq {
@@ -913,10 +917,12 @@ button {
         display: block;
         color: $brand-brown-dark;
         font-size: 18px;
+        @extend .text-bold;
       }
     }
   }
 }
+
 ///end faq////
 ///cart//////
 .cart-main {
@@ -928,7 +934,10 @@ button {
 .cart-table {
   .more,
   .less {
-    padding: 3px 6px;
+    @include padding(3px 4px);
+  }
+  .less {
+    margin-left: -3px;
   }
   .cart-imgholder {
     @include square(200px);
@@ -964,16 +973,20 @@ button {
     }
   }
   .cart-grand-total {
-    @include padding(18px);
-    font-size: 20px;
+    @include padding(20px 30px);
+    font-size: 22px;
   }
   .shipping {
     @include margin(20px 0);
     p {
       @include margin(0);
     }
+    .continue {
+      @include margin(0 20px 0 0);
+    }
   }
 }
+
 //end cart///
 ///////////////
 //Footer///////
@@ -1066,5 +1079,6 @@ footer {
     letter-spacing: 2px;
   }
 }
+
 //////end footer/////
 @import "harsh";
