--- a/views/content/cart.html
+++ b/views/content/cart.html
@@ -8,10 +8,10 @@
 
   <div class="cart-main">
     <div class="container">
-      <h3 class="text-uppercase brand-brown-dark letter-space">Items you would like to purchase</h3>
+      <h3 class="text-uppercase brand-brown-dark letter-space font-semibold">Items you would like to purchase</h3>
       <div class="cart-table">
         <table class="table">
-          <thead class="brand-brown-dark brand-brown-bg text-uppercase">
+          <thead class="brand-brown-dark brand-brown-bg text-uppercase letter-space">
             <tr>
               <th class="text-center">Items</th>
               <th class="text-center">Quantity</th>
@@ -20,7 +20,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr class="text-center" ng-repeat="product in cart">
+            <tr class="text-center letter-space font-semibold" ng-repeat="product in cart">
               <td>
                 <figure>
                   <div class="cart-imgholder m-center round">
@@ -36,22 +36,22 @@
               </td>
               <td>
                 <div class="cart-amount">
-                <p>Rs. {{product.amount}}</p>
+                <p>RS. {{product.amount}}</p>
               </div>
               </td>
               <td>
                 <div class="cart-total-amount">
-                <p>Rs. {{product.totalamount}}</p>
+                <p>RS. {{product.totalamount}}</p>
               </div>
                 <div class="remove text-right">
-                  <button class="btn btn-primary text-uppercase">Remove</button>
+                  <button class="btn btn-primary text-uppercase no-radius">Remove</button>
                 </div>
               </td>
             </tr>
           </tbody>
         </table>
 
-        <div class="cart-grand-total clearfix brand-brown-bg brand-brown-dark">
+        <div class="cart-grand-total clearfix brand-brown-bg brand-brown-dark font-semibold">
           <span class="text-uppercase pull-left">Grand Total</span>
           <span class="pull-right text-uppercase">Rs. 375.00</span>
         </div>
@@ -59,12 +59,12 @@
         <div class="shipping">
           <div class="row">
             <div class="col-md-6">
-              <p class="brand-primary">Free shipping in Mumbai and Kolkata and India,</p>
-              <p class="brand-primary">Shipping Charges applicable<sup>*</sup> for all other cities and countries.</p>
+              <p class="brand-primary letter-space">Free shipping in Mumbai and Kolkata and India,</p>
+              <p class="brand-primary letter-space">Shipping Charges applicable<sup>*</sup> for all other cities and countries.</p>
             </div>
             <div class="col-md-6">
               <div class="text-right">
-                <a href="" class="btn btn-primary text-uppercase">Continue Shopping</a>
+                <a href="" class="btn btn-primary text-uppercase continue">Continue Shopping</a>
                 <a href="" class="btn btn-primary text-uppercase">Proceed to checkout</a>
               </div>
             </div>
