--- a/views/content/productdetail.html
+++ b/views/content/productdetail.html
@@ -14,48 +14,48 @@
 
         <div class="col-md-7">
           <h3 class="text-uppercase">Baked Potato Chips</h3>
-           <ul class="nav nav-tabs">
+           <!-- <ul class="nav nav-tabs">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#">Menu 1</a></li>
             <li><a href="#">Menu 2</a></li>
             <li><a href="#">Menu 3</a></li>
-          </ul>
+          </ul> -->
           <tabset>
             <tab>
               <tab-heading>
-                <button type="button" class="btn btn-primary text-uppercase"><i class="fa fa-play-circle-o"></i> View Here</button>
+                <button type="button" class="btn text-uppercase"><i class="fa fa-play-circle-o"></i> View Here</button>
               </tab-heading>
+              <p></p>
+              <p></p>
+              <span><sup>*</sup>Gluten Free</span>
+              <br>
+              <span><sup>*</sup>Low Fat</span>
+
+              <div class="row">
+                <div class="col-md-4">
+                  <div class="product-price">
+                    <p>Net Weight: 100 gms</p>
+                    <p><i class="fa fa-inr"></i> 225</p>
+                  </div>
+                </div>
+
+                <div class="col-md-8">
+                  <div class="form-group">
+                    <label for="quan">Quantity:</label>
+                    <select class="form-control" id="quan">
+                      <option>1</option>
+                      <option>2</option>
+                      <option>3</option>
+                      <option>4</option>
+                    </select>
+                  </div>
+
+                  <a href="" class="btn btn-primary text-uppercase">Add to cart</a>
+                  <a href="" class="btn btn-primary text-uppercase">Continue Shopping</a>
+                </div>
+              </div>
             </tab>
           </tabset>
-          <p></p>
-          <p></p>
-          <span><sup>*</sup>Gluten Free</span>
-          <br>
-          <span><sup>*</sup>Low Fat</span>
-
-          <div class="row">
-            <div class="col-md-4">
-              <div class="product-price">
-                <p>Net Weight: 100 gms</p>
-                <p><i class="fa fa-inr"></i> 225</p>
-              </div>
-            </div>
-
-            <div class="col-md-8">
-              <div class="form-group">
-                <label for="quan">Quantity:</label>
-                <select class="form-control" id="quan">
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                </select>
-              </div>
-
-              <a href="" class="btn btn-primary text-uppercase">Add to cart</a>
-              <a href="" class="btn btn-primary text-uppercase">Continue Shopping</a>
-            </div>
-          </div>
         </div>
       </div>
     </div>
