--- a/views/header.html
+++ b/views/header.html
@@ -49,7 +49,7 @@
               </div>
               <div class="col-md-2">
                 <div class="signin">
-                  <a class="brand-primary text-uppercase font-semibold" href="#" ng-click="">Sign In</a>
+                  <a class="brand-primary text-uppercase font-semibold" href="#" ng-click="openLogin();">Sign In</a>
                 </div>
               </div>
             </div>
