--- a/views/modal/login.html
+++ b/views/modal/login.html
@@ -1,4 +1,4 @@
-<div class="login-tab get-center">
+<div class="login-tab">
     <tabset>
         <tab heading="Sign up">
             <div class="login-form">
@@ -42,10 +42,10 @@
                 </div>
                 <div class="social-btn text-center">
                     <div class="btn-round">
-                        <button type="button"><i class="fa fa-facebook"></i></button>
+                        <button type="button" class="fb-btn"><i class="fa fa-facebook"></i></button>
                     </div>
                     <div class="btn-round">
-                        <button type="button"><i class="fa fa-google-plus"></i></button>
+                        <button type="button" class="google-btn"><i class="fa fa-google-plus"></i></button>
                     </div>
                 </div>
             </div>
