--- a/sass/main.scss
+++ b/sass/main.scss
@@ -75,6 +75,8 @@ $facebook: #3a579d !default;
 $google: #dd4d3c !default;
 $twitter: #49c8f5 !default;
 $instagram: #396d9a !default;
+
+
 .white {
   color: $body-bg;
 }
@@ -141,7 +143,6 @@ $instagram: #396d9a !default;
 .brand-graylight-bg {
   background-color: $brand-graylight;
 }
-
 // fonts
 .font-primary {
   font-family: $font-family-sans-serif;
@@ -164,7 +165,6 @@ $instagram: #396d9a !default;
 .font-gotham {
   font-family: $font-gotham;
 }
-
 //button
 .btn-yellow {
   @include button-variant(white, $brand-yellow, $brand-yellow);
@@ -185,9 +185,12 @@ $instagram: #396d9a !default;
     color: white !important;
   }
 }
-.foot-btn {
-  @include button-variant($brand-primary, white, $brand-primary);
-}
+.fb-btn {  @include button-variant(white, $facebook, $facebook);}
+
+.google-btn { @include button-variant(white,$google,$google); }
+
+.foot-btn {  @include button-variant($brand-primary, white, $brand-primary); }
+
 .btn-more {
   padding: 12px 34px !important;
 }
@@ -248,6 +251,7 @@ textarea {
 form .form-control {
   min-height: 40px;
   border-radius: 4px;
+  @include box-shadow(none);
 }
 textarea {
   resize: none;
@@ -255,7 +259,6 @@ textarea {
 .v-top {
   vertical-align: top;
 }
-
 // Class
 .relate {
   position: relative;
@@ -633,14 +636,19 @@ button {
     }
   }
 }
-
 ///end home///
 /////////////////////
 ////Health-Management
 ////////////////////
-.health-descp {  font-size: 16px; }
-.healthchart-list { margin: 60px 0; }
-.align { @include margin(-12px 4px 0 0); }
+.health-descp {
+  font-size: 16px;
+}
+.healthchart-list {
+  margin: 60px 0;
+}
+.align {
+  @include margin(-12px 4px 0 0);
+}
 .tick {
   @include square(34px);
   margin: 0 10px 0 0;
@@ -657,10 +665,14 @@ button {
         max-height: 100%;
       }
     }
-    figcaption { margin: 10px 0; }
+    figcaption {
+      margin: 10px 0;
+    }
   }
 }
-.health-heading { margin: 0 0 25px; }
+.health-heading {
+  margin: 0 0 25px;
+}
 .consult-chart {
   width: 110px;
   height: 67px;
@@ -707,7 +719,9 @@ button {
       }
     }
   }
-  .chart-info { padding: 30px;  }
+  .chart-info {
+    padding: 30px;
+  }
   .nav-tabs li:last-child a {
     &:before {
       content: "";
@@ -852,7 +866,6 @@ button {
     }
   }
 }
-
 //end Health-management////
 /////meet////
 .suman-video {
@@ -887,7 +900,6 @@ button {
 .pro-info {
   margin-bottom: 60px;
 }
-
 ////end meet///
 //////faq/////
 .faq {
@@ -922,7 +934,6 @@ button {
     }
   }
 }
-
 ///end faq////
 ///cart//////
 .cart-main {
@@ -986,8 +997,46 @@ button {
     }
   }
 }
-
 //end cart///
+////Login//////
+.login-tab {
+  form {
+    padding: 0 15px;
+    margin: 30px 0;
+    input {
+      border-color: $brand-primary;
+      font-style: italic;
+    }
+  }
+  .nav-tabs {
+    @include display(flex);
+    border: none;
+    li {
+      @include flex(1);
+      text-align: center;
+      text-transform: uppercase;
+      a {
+        border: none;
+        margin: -5px 0 0 0;
+        color: $brand-primary;
+        font-size: 20px;
+        &:hover {
+          background-color: $brand-primary;
+          color: #fff;
+        }
+      }
+    }
+  }
+  .nav-tabs > li.active > a,
+  .nav-tabs > li.active > a:hover,
+  .nav-tabs > li.active > a:focus {
+    border: none;
+    border-radius: 4px;
+    background-color: $brand-primary;
+    color: #fff;
+  }
+}
+////end login//
 ///////////////
 //Footer///////
 ///////////////
@@ -1079,6 +1128,5 @@ footer {
     letter-spacing: 2px;
   }
 }
-
 //////end footer/////
 @import "harsh";
