--- a/views/content/productdetail.html
+++ b/views/content/productdetail.html
@@ -13,47 +13,51 @@
         </div>
 
         <div class="col-md-7">
-          <h3 class="text-uppercase">Baked Potato Chips</h3>
-           <!-- <ul class="nav nav-tabs">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Menu 1</a></li>
-            <li><a href="#">Menu 2</a></li>
-            <li><a href="#">Menu 3</a></li>
-          </ul> -->
+          <h3 class="text-uppercase font-semibold">Baked Potato Chips</h3>
           <tabset>
             <tab>
               <tab-heading>
-                <button type="button" class="btn text-uppercase"><i class="fa fa-play-circle-o"></i> View Here</button>
+                <span class="text-uppercase font-semibold">About</span>
               </tab-heading>
-              <p></p>
-              <p></p>
-              <span><sup>*</sup>Gluten Free</span>
-              <br>
-              <span><sup>*</sup>Low Fat</span>
+              <div class="inner-product-detail">
+                <p class="white">Love eating potato chips and don’t know how to deal with the craving? The world may say a resounding no to potato chips, but there is no need to be in denial. Here are baked potato-crisps that allow you to savor your favorite comfort food and do it without guilt.</p>
+                <p class="white">Reduced calories, crunchy and almost totally free of oil, try our baked potato chips that are sheer pleasure, especially with a tangy salsa or a smooth curd dip.</p>
+                <span class="white"><sup>*</sup>Gluten Free</span>
+                <br>
+                <span class="white"><sup>*</sup>Low Fat</span>
+              </div>
 
               <div class="row">
                 <div class="col-md-4">
                   <div class="product-price">
-                    <p>Net Weight: 100 gms</p>
-                    <p><i class="fa fa-inr"></i> 225</p>
+                    <p class="brand-primary font-semibold">Net Weight: 100 gms</p>
+                    <p class="text-center font-semibold"><i class="fa fa-inr"></i> 225</p>
                   </div>
                 </div>
 
                 <div class="col-md-8">
-                  <div class="form-group">
+                  <div class="form-group relate">
                     <label for="quan">Quantity:</label>
                     <select class="form-control" id="quan">
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
+                      <option>01</option>
+                      <option>02</option>
+                      <option>03</option>
+                      <option>04</option>
                     </select>
+                    <span><i class="fa fa-caret-down"></i></span>
                   </div>
 
-                  <a href="" class="btn btn-primary text-uppercase">Add to cart</a>
-                  <a href="" class="btn btn-primary text-uppercase">Continue Shopping</a>
+                  <div class="product-buttons">
+                    <a href="" class="btn btn-primary text-uppercase">Add to cart</a>
+                    <a href="" class="btn btn-primary text-uppercase">Continue Shopping</a>
+                  </div>
                 </div>
               </div>
+            </tab>
+            <tab>
+              <tab-heading>
+                <span class="text-uppercase font-semibold">Nutritional Value</span>
+              </tab-heading>
             </tab>
           </tabset>
         </div>
