--- a/views/modal/login.html
+++ b/views/modal/login.html
@@ -73,10 +73,10 @@
                 </div>
                 <div class="social-btn text-center">
                     <div class="btn-round">
-                        <button type="button"><i class="fa fa-facebook"></i></button>
+                        <button type="button fb-btn"><i class="fa fa-facebook"></i></button>
                     </div>
                     <div class="btn-round">
-                        <button type="button"><i class="fa fa-google-plus"></i></button>
+                        <button type="button google-btn"><i class="fa fa-google-plus"></i></button>
                     </div>
                 </div>
             </div>
