--- a/views/modal/login.html
+++ b/views/modal/login.html
@@ -28,7 +28,7 @@
                         </div>
                     </div>
                     <div class="accept">
-                        <label for="">
+                        <label for="" class="text-light text-uppercase">
                             <input type="checkbox" class="text-uppercase"> I Accept the Terms and Conditions and Privacy Policy of the website
                         </label>
                     </div>
@@ -37,15 +37,15 @@
                     </div>
                 </form>
                 <div class="text-center text-uppercase">
-                    <span>or</span>
+                    <span class="block">or</span>
                     <p>sign up via</p>
                 </div>
                 <div class="social-btn text-center">
-                    <div class="btn-round">
-                        <button type="button" class="fb-btn"><i class="fa fa-facebook"></i></button>
+                    <div class="btn-round inline-block">
+                        <button type="button" class="btn fb-btn no-border round"><i class="fa fa-facebook"></i></button>
                     </div>
-                    <div class="btn-round">
-                        <button type="button" class="google-btn"><i class="fa fa-google-plus"></i></button>
+                    <div class="btn-round inline-block">
+                        <button type="button" class="btn google-btn no-border round"><i class="fa fa-google-plus"></i></button>
                     </div>
                 </div>
             </div>
@@ -68,15 +68,15 @@
                     </div>
                 </form>
                 <div class="text-center text-uppercase">
-                    <span>or</span>
+                    <span class="block">or</span>
                     <p>sign up via</p>
                 </div>
                 <div class="social-btn text-center">
-                    <div class="btn-round">
-                        <button type="button fb-btn"><i class="fa fa-facebook"></i></button>
+                    <div class="btn-round inline-block">
+                        <button type="button" class="btn fb-btn round no-border"><i class="fa fa-facebook"></i></button>
                     </div>
-                    <div class="btn-round">
-                        <button type="button google-btn"><i class="fa fa-google-plus"></i></button>
+                    <div class="btn-round inline-block">
+                        <button type="button" class="btn google-btn round no-border"><i class="fa fa-google-plus"></i></button>
                     </div>
                 </div>
             </div>
