--- a/views/modal/login.html
+++ b/views/modal/login.html
@@ -32,12 +32,12 @@
                             <input type="checkbox" class="text-uppercase"> I Accept the Terms and Conditions and Privacy Policy of the website
                         </label>
                     </div>
-                    <div class="text-center">
+                    <div class="text-center submit">
                         <button class="btn btn-primary text-uppercase" type="submit">Signup</button>
                     </div>
                 </form>
                 <div class="text-center text-uppercase">
-                    <span class="block">or</span>
+                    <span class="block or">or</span>
                     <p>sign up via</p>
                 </div>
                 <div class="social-btn text-center">
@@ -61,7 +61,7 @@
                             <div class="form-group">
                                 <input type="password" class="form-control" placeholder="Password">
                             </div>
-                            <div class="text-center">
+                            <div class="text-center submit">
                                 <button class="text-uppercase btn btn-primary" type="submit">Sign in</button>
                             </div>
                         </div>
